se aplican ajustes en inventario y proveedor, al mismo tiempo que se agregan anotaciones swagger